Uploaded image for project: 'Lustre'
  1. Lustre
  2. LU-7732

check_for_next_transno()) lustre-MDT0000: waking for gap in transno, VBR is OFF

XMLWordPrintable

    • Icon: Bug Bug
    • Resolution: Fixed
    • Icon: Minor Minor
    • Lustre 2.9.0
    • None
    • None
    • 3
    • 9223372036854775807

      [ 2270.584467] LustreError: 30824:0:(ldlm_lib.c:1900:check_for_next_transno()) lustre-MDT0000: waking for gap in transno, VBR is OFF (skip: 4295194948, ql: 2, comp: 2, conn: 4, next: 4295194950, next_update 4295194960 last_committed: 4295194129)
      [ 2270.587115] LustreError: 30824:0:(ldlm_lib.c:1900:check_for_next_transno()) lustre-MDT0000: waking for gap in transno, VBR is OFF (skip: 4295194951, ql: 2, comp: 2, conn: 4, next: 4295194952, next_update 4295194960 last_committed: 4295194129)
      [ 2270.590338] LustreError: 30824:0:(ldlm_lib.c:1900:check_for_next_transno()) lustre-MDT0000: waking for gap in transno, VBR is OFF (skip: 4295194955, ql: 2, comp: 2, conn: 4, next: 4295194958, next_update 4295194960 last_committed: 4295194129)
      [ 2270.592946] LustreError: 30824:0:(ldlm_lib.c:1900:check_for_next_transno()) lustre-MDT0000: waking for gap in transno, VBR is OFF (skip: 4295194959, ql: 2, comp: 2, conn: 4, next: 4295194960, next_update 4295194960 last_committed: 4295194129)
      

      I met a lot such message during replay test. And it turns out those losing transaction numbers are actually coming from open/close request, because the open request (no create) will be destroyed(removed from replay list) after close, no matter if the transaction is committed or not, i.e. open request will not be replayed usually.

      So the question here is that should we have to allocate transno to open (no create) request? If it is necessary, then we at least should turn off these annoying console message, since they are not real error.

            bogl Bob Glossman (Inactive)
            di.wang Di Wang (Inactive)
            Votes:
            0 Vote for this issue
            Watchers:
            10 Start watching this issue

              Created:
              Updated:
              Resolved: